Вынес хэндлер отдельную папку

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -3,5 +3,5 @@ strict = true
 exclude = (^migrations/|DockerVolumes|venv)
 plugins = pydantic.mypy
 
-[mypy-app]
+[mypy-handlers.handlers]
 disable_error_code = misc
